# mlops_learn

./: pyproject.toml
data/: teste3.txt
notebooks/: 00_csv_minio_connection.ipynb  01_csv_dataset.ipynb
src/minio/: minio.py
